Quorum3/Library/Tests/TypeChecker/Pass/TextStartsWith.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        output t:StartsWith("he")
        output p:StartsWith("he")
    end
end